[package]
name = "astro-assembly"
version = "1.1.0"
authors = ["Astroport"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport-governance = { path = "../../packages/astroport-governance", default-features = false, version = "1.0.0" }
astroport = { git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport" }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "1.1"
cw-multi-test = "0.15"
astroport-token = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport-token"}
astroport-xastro-token = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport-xastro-token"}
voting-escrow = { path= "../voting_escrow", default-features = false, version = "1.0.0" }
astroport-staking = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport-staking"}
builder-unlock = {path = "../builder_unlock", default-features = false, version = "1.0.0"}
anyhow = "1"
