[package]
name = "builder-unlock"
version = "1.1.0"
authors = ["_astromartian", "Astroport"]
edition = "2021"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport"}
astroport-governance = { path = "../../packages/astroport-governance", default-features = false, version = "1.0.0" }
thiserror = { version = "1.0.20" }
classic-bindings = "0.1.1"

[dev-dependencies]
cosmwasm-schema = "1.1"
cw-multi-test = "0.15"
astroport-token = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus", package = "astroport-token"}
