[package]
name = "generator-controller"
version = "1.0.0"
authors = ["Astroport"]
edition = "2018"
repository = "https://github.com/astroport-fi/astroport-governance"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.11.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
classic-bindings = "0.1.1"
thiserror = { version = "1.0.20" }
itertools = "0.10"
astroport = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
astroport-governance = { path = "../../packages/astroport-governance", version = "1.0.0" }

[dev-dependencies]
cosmwasm-schema = "1.1"
cw-multi-test = "0.15"
astroport-generator = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
astroport-pair = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
astroport-factory = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
astroport-token = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
astroport-staking = {git = "https://github.com/classic-terra/astroport-core.git", branch = "terra_classic_invictus"}
cw20 = "0.15"
voting-escrow = { path = "../voting_escrow", version = "1.0.0" }
anyhow = "1"
proptest = "1.0.0"
